--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    margin: 10;
+    margin: 0;
 }
 
 
@@ -63,6 +63,12 @@ li a:hover {
     height: 100vh;
 }
 
+#section-1 i {
+    text-align: center;
+    font-size: 600%;
+    padding-left: 45%;
+}
+
 .column-2 h1 {
     font-size: 40px;
     text-align: left;
@@ -109,24 +115,40 @@ li a:hover {
     background-color: #FAF5F3;
 }
 
-#section-3 h2 {
-    font-size: 400%;
-    text-align: left;
+#section-3 h1 {
+    width: 50%;
+    float: left;
+    font-size: 40px;
+    text-align: center;
 }
 
 #section-3 {
+    font-size: 25px;
+    text-align: center;
     background-color: #F2F9F8;
 }
 
 #section-4 {
     color: black;
-    font-size: 40px;
+    font-size: 35px;
     background-color: #FAF5F3;
 }
 
 .column-4 {
     width: 25%;
     float: left;
+}
+
+#section-4 h2 {
+    font-size: 25px;
+    text-align: left;
+}
+
+#map {
+    width: 100%;
+    height: 350px;
+    border: 0;
+    /* height="450" style="border:0;" */
 }
 
 #section-5 h2 {
@@ -210,6 +232,24 @@ li a:hover {
     width: 100%;
 }
 
+#section-10 h2 {
+    font-size: 25px;
+    text-align: left;
+}
+
+#section-10 {
+    background-color: #FAF5F3;
+}
+
+.column-2 {
+    width: 50%;
+    float: left;
+}
+
+.column-2 img {
+    width: 100%;
+}
+
 .flex {
     display: flex;
     align-items: center;
@@ -261,4 +301,16 @@ li a:hover {
     padding-right: 10%;
     padding-bottom: 1%;
     padding-top: 1%;
+}
+
+@media only screen and (max-width: 700px) {
+    .column-4 {
+        width: 50%;
+    }
+    #section-2 p {
+        font-size: 4vw;
+    }
+    .column-2 {
+        width: 100%;
+    }
 }
